# inventory-sync-lab

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  compose.yaml  pyproject.toml
book/: 00-setting-up-your-laboratory.md  01-what-is-inventory.md  02-authoritative-source-of-truth.md  03-the-inventory-ledger.md  04-projections.md  05-time-and-events.md  06-direct-synchronization.md  07-queues.md  08-workers-and-capacity.md  09-multiple-workers.md  10-stale-snapshots.md  11-measuring-freshness.md  12-inventory-revisions.md  13-detecting-stale-synchronizations.md  14-rejecting-stale-synchronizations.md  15-multiple-projections.md  16-fan-out-synchronization.md  17-retry-policies.md  18-duplicate-delivery.md  19-idempotent-synchronization.md  20-out-of-order-delivery.md  21-ordering-guarantees.md  22-dead-letter-queues.md  23-end-to-end-operations-laboratory.md
diagrams/: authoritative-inventory.md  dead-letter-queues.md  detecting-stale.md  deterministic-timeline.md  direct-synchronization.md  duplicate-delivery.md  end-to-end-operations-laboratory.md  fan-out-synchronization.md  idempotent-synchronization.md  inventory-ledger.md  inventory-projections.md  inventory-revisions.md  inventory-state.md  measuring-freshness.md  multiple-projections.md  multiple-workers.md  ordering-guarantees.md  out-of-order-delivery.md  queued-synchronization.md  rejecting-stale.md  retry-policies.md  stale-snapshots.md  worker-capacity.md
docs/: README.md  architecture.md  design-philosophy.md  learning-path.md  release-checklist.md  release-notes-v1.0.0.md
experiments/: README.md
scripts/: validate-distributions.sh
tests/: test_authority.py  test_capacity.py  test_cli.py  test_dead_letter.py  test_duplicate_delivery.py  test_fanout.py  test_freshness.py  test_idempotency.py  test_inventory.py  (+16 more)
(+34 files in other folders)
